--- a/package.json
+++ b/package.json
@@ -1,32 +1,18 @@
 {
-  "name": "telegram-bot-vercel-boilerplate",
-  "version": "1.1.0",
-  "description": "Telegram Bot Vercel Boilerplate",
-  "main": "src/index.ts",
-  "author": "Mark Pavlov (https://github.com/sollidy)",
-  "homepage": "https://github.com/sollidy/telegram-bot-vercel-boilerplate",
-  "dependencies": {
-    "@vercel/node": "^5.1.16",
-    "axios": "^1.6.0",
-    "dotenv-cli": "^8.0.0",
-    "telegraf": "^4.16.3",
-    "yt-dlp-wrap": "^2.3.12"
-  },
-  "devDependencies": {
-    "@types/debug": "^4.1.12",
-    "@types/node": "^22.8.6",
-    "@vercel/ncc": "^0.38.2",
-    "debug": "^4.3.7",
-    "nodemon": "^3.1.7",
-    "prettier": "^3.3.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
-  },
+  "name": "test-bot",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "DEBUG=bot* dotenv -- nodemon -e ts -x ts-node src/index.ts",
-    "devWindows": "@powershell -Command $env:DEBUG='bot*';dotenv -- -- nodemon -e ts -x ts-node src/index.ts",
-    "build": "ncc build src/index.ts -o public -m",
-    "prettier": "prettier --write 'src/**/*.ts'",
-    "lint": "tsc --noemit"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "ngrok": "^5.0.0-beta.2"
+  },
+  "dependencies": {
+    "node-telegram-bot-api": "^0.65.1"
   }
 }
