--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
   "type": "module",
-  "dependencies": {
-    "telegraf": "^4.16.0"
-  },
-  "engines": {
-    "node": "24.x"
-  }
+  "dependencies": { "telegraf": "^4.16.0" },
+  "engines": { "node": "24.x" }
 }
