--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
-node_modules/
-.env
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+/dist
+/public
+
+# misc
 .DS_Store
-*.log
+.env*
+!.env-sample
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
