--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "homepage": "https://github.com/sollidy/telegram-bot-vercel-boilerplate",
   "dependencies": {
     "@vercel/node": "^5.1.16",
+    "axios": "^1.7.7",
     "dotenv-cli": "^8.0.0",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "@types/debug": "^4.1.12",
     "@types/node": "^22.8.6",
+    "@types/axios": "^0.14.0",
     "@vercel/ncc": "^0.38.2",
     "debug": "^4.3.7",
     "nodemon": "^3.1.7",
